--- a/src/components/Sidebar/index.less
+++ b/src/components/Sidebar/index.less
@@ -9,20 +9,24 @@
             position: relative;
             height: 44px;
             padding-left: 20px;
-            color: #323538;
             font-weight: 700;
-            font-size: 16px;
             line-height: 44px;
             background-color: #f7f8f9;
             cursor: pointer;
             user-select: none;
-        }
+            .item-title {
+                color: #323538;
+                font-size: 16px;
+            }
 
-        .right-action {
-            position: absolute;
-            top: 50%;
-            right: 20px;
-            transform: translateY(-50%);
+            .right-action {
+                position: absolute;
+                top: 50%;
+                right: 20px;
+                color: #a4a5a9;
+                font-size: 16px;
+                transform: translateY(-50%);
+            }
         }
 
         ul {
