--- a/src/components/Settings/index.less
+++ b/src/components/Settings/index.less
@@ -1,14 +1,20 @@
 .fr-generator-container .right-layout {
-  flex-shrink: 0;
-  width: 8rem;
-  padding-top: 24px;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    width: 8rem;
+    height: 100%;
+    padding-top: 24px;
+}
+
+.fr-generator-container .head-right-arrow .right-menu-icon,
+.fr-generator-container .right-layout .right-menu-icon {
+    color: #434343;
+    font-size: 16px;
 }
 
 @media screen and (min-width: 60em) {
-  .fr-generator-container .right-layout {
-    width: 16rem;
-  }
+    .fr-generator-container .right-layout {
+        width: 16rem;
+    }
 }
