change: 文件名修改和样式更改

--- a/src/components/Sidebar/Sidebar.less
+++ b/src/components/Sidebar/Sidebar.less
@@ -7,12 +7,6 @@
         padding: 0;
         padding-top: 30px;
         overflow-y: auto;
-
-        .left-menu-icon {
-            color: #434343;
-            font-size: 16px;
-        }
-
         .f6.b {
             position: relative;
             height: 44px;
@@ -26,7 +20,6 @@
                 color: #323538;
                 font-size: 16px;
             }
-
             .right-action {
                 position: absolute;
                 top: 50%;
@@ -36,19 +29,34 @@
                 transform: translateY(-50%);
             }
         }
-
         ul {
             display: flex;
             flex-wrap: wrap;
             align-content: flex-start;
             padding-left: 8px;
         }
+        .toggleIcon {
+            width: 30px;
+            height: 30px;
+            padding: 8px 8px 0 0;
+            text-align: right;
+            .left-menu-icon {
+                color: #434343;
+                font-size: 16px;
+            }
+        }
     }
-
     .head-left-arrow {
-        .left-menu-icon {
-            color: #434343;
-            font-size: 16px;
+        width: 30px;
+        transform: rotate(180deg);
+        .toggleIcon {
+            width: 30px;
+            height: 30px;
+            padding: 0 0 8px 8px;
+            .left-menu-icon {
+                color: #434343;
+                font-size: 16px;
+            }
         }
     }
 }
